--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "fe-48-react-diplom",
   "version": "0.1.0",
-  "private": true,
+  "homepage": "https://samoylovxo.github.io/react-diploma",
+  "private": false,
   "dependencies": {
     "@ant-design/icons": "^5.1.4",
     "@hookform/error-message": "^2.0.1",
@@ -26,7 +27,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -47,6 +50,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@svgr/webpack": "^8.0.1"
+    "@svgr/webpack": "^8.0.1",
+    "gh-pages": "^6.0.0"
   }
 }
